--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -13,6 +13,8 @@ jobs:
         with:
           node-version: '20'
 
+      - uses: actions/checkout@v3
+
       - name: Install dependencies
         shell: bash
         run: npm ci
